--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zxx" class="no-js">
+<html lang="zxx" class="">
 
 <head>
 	<!-- Mobile Specific Meta -->
@@ -31,7 +31,16 @@
 </head>
 
 <body>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H1FVNLR4BH"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-H1FVNLR4BH');
+</script>
+	
 	<!-- Start Header Area -->
 	<header class="header_area sticky-header">
 		<div class="main_menu">
